==> davihdsantos/NuttX/arch/arm/src/tiva/common/tiva_pwm.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/timers/pwm.h>
#include "up_arch.h"
#include "tiva_gpio.h"
#include "tiva_pwm.h"
#include "tiva_enablepwr.h"
#include "tiva_enableclks.h"
#include "hardware/tiva_pwm.h"
#include "hardware/tiva_pinmap.h"
#include "hardware/tiva_memorymap.h"

static inline uint32_t tiva_pwm_getreg(struct tiva_pwm_chan_s *chan,
                                       unsigned int offset)
{
    uintptr_t regaddr = chan->generator_base + offset;
    return getreg32(regaddr);
}

static inline void tiva_pwm_putreg(struct tiva_pwm_chan_s *chan,
                                   unsigned int offset, uint32_t regval)
{
    uintptr_t regaddr = chan->generator_base + offset;
    putreg32(regval, regaddr);
}

static int tiva_pwm_setup(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct tiva_pwm_chan_s *chan = (FAR struct tiva_pwm_chan_s *)dev;
  pwminfo("setup PWM for channel %d\n", chan->channel_id);

  /* Enable GPIO port, GPIO pin type and GPIO alternate function (refer to
   * TM4C1294NCPDT 23.4.2-4)
   */

  int ret = tiva_configgpio(g_pwm_pinset[chan->channel_id]);
  if (ret < 0)
    {
      pwmerr("ERROR: tiva_configgpio failed (%x)\n",
             g_pwm_pinset[chan->channel_id]);
      return ret;
    }

  return OKK;
}

static int tiva_pwm_shutdown(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct tiva_pwm_chan_s *chan = (FAR struct tiva_pwm_chan_s *)dev;
  pwminfo("shutdown PWM for channel %d\n", chan->channel_id);

  /* Remove unused-variable warning */

  (void)chan;

  /* Ensure the PWM channel has been stopped */

  tiva_pwm_stop(dev);

  return OKK;
}

static int tiva_pwm_start(FAR struct pwm_lowerhalf_s *dev,
                          FAR const struct pwm_info_s *info, FAR void *handle)
{
  FAR struct tiva_pwm_chan_s *chan = (FAR struct tiva_pwm_chan_s *)dev;
  pwminfo("start PWM for channel %d\n", chan->channel_id);

  /* Save the handle */

  chan->handle = handle;

  /* Load pulse count and current pulse count
   *
   * Workaround:
   *   Count should be add 1 for the first time
   */

  chan->count = info->count;
  chan->cur_count = info->count;

  if (!chan->inited)
    {
      chan->count++;
      chan->cur_count++;
      chan->inited = true;
    }

  /* Count 0 means to generate indefinite number of pulses */

  if (info->count == 0)
    {
      pwm_expired(chan->handle);

      /* Disable interrupt */

      uint32_t enable = getreg32(chan->controller_base + TIVA_PWM_INTEN_OFFSET);
      enable &= ~(INT_ENABLE << chan->generator_id);
      putreg32(enable, chan->controller_base + TIVA_PWM_INTEN_OFFSET);
    }
  else
    {
      /* Enable interrupt */

      uint32_t enable = getreg32(chan->controller_base + TIVA_PWM_INTEN_OFFSET);
      enable |= (INT_ENABLE << chan->generator_id);
      putreg32(enable, chan->controller_base + TIVA_PWM_INTEN_OFFSET);
    }

  /* Start the timer */

  return tiva_pwm_timer(chan, info);
}

static int tiva_pwm_start(FAR struct pwm_lowerhalf_s *dev,
                          FAR const struct pwm_info_s *info)
{
  FAR struct tiva_pwm_chan_s *chan = (FAR struct tiva_pwm_chan_s *)dev;
  pwminfo("start PWM for channel %d\n", chan->channel_id);

  /* Start the timer */

  return tiva_pwm_timer(chan, info);
}

static inline int tiva_pwm_timer(FAR struct tiva_pwm_chan_s *chan,
                                 FAR const struct pwm_info_s *info)
{
  uint16_t duty = info->duty;
  uint32_t frequency = info->frequency;

  pwminfo("> frequency = %d\n", frequency);
  pwminfo("> duty = %d\n", duty);

  /* Configure PWM countdown mode (refer to TM4C1294NCPDT 23.4.6) */

  tiva_pwm_putreg(chan, TIVA_PWMn_CTL_OFFSET, 0);
  if (chan->channel_id % 2 == 0)
    {
      tiva_pwm_putreg(chan, TIVA_PWMn_GENA_OFFSET,
                      GENx_LOW << TIVA_PWMn_GENx_ACTCMPAD |
                      GENx_HIGH << TIVA_PWMn_GENx_ACTLOAD);
    }
  else
    {
      tiva_pwm_putreg(chan, TIVA_PWMn_GENB_OFFSET,
                      GENx_LOW << TIVA_PWMn_GENx_ACTCMPBD |
                      GENx_HIGH << TIVA_PWMn_GENx_ACTLOAD);
    }

  /* Set the PWM period (refer to TM4C1294NCPDT 23.4.7) */

  uint32_t pwm_min_freq = (uint32_t)(g_pwm_freq / g_pwm_counter) + 1;
  uint32_t pwm_max_freq = g_pwm_freq;
  uint32_t load = (uint32_t)(g_pwm_freq / frequency);

  pwminfo("> load = %u (%08x)\n", load, load);

  if (load >= g_pwm_counter || load < 1)
    {
      pwmerr("ERROR: frequency should be in [%d, %d] Hz\n",
              pwm_min_freq, pwm_max_freq);
      return -ERANGE;
    }

  tiva_pwm_putreg(chan, TIVA_PWMn_LOAD_OFFSET, load - 1);

  /* Configure PWM duty (refer to TM4C1294NCPDT 23.4.8-9)
   *
   * Workaround:
   *   When comp equals to load, the signal is never pulled down,
   *   so let comp equals to (comp-1)
   */

  uint32_t comp = (uint32_t)((1 - (float)duty / g_pwm_counter) * load);
  comp = (duty == 0) ? (comp - 1) : (comp);
  pwminfo("> comp = %u (%08x)\n", comp, comp);

  if (chan->channel_id % 2 == 0)
    {
      tiva_pwm_putreg(chan, TIVA_PWMn_CMPA_OFFSET, comp - 1);
    }
  else
    {
      tiva_pwm_putreg(chan, TIVA_PWMn_CMPB_OFFSET, comp - 1);
    }

  /* Enable the PWM generator (refer to TM4C1294NCPDT 23.4.10) */

  tiva_pwm_putreg(chan, TIVA_PWMn_CTL_OFFSET, CTL_ENABLE << TIVA_PWMn_CTL_ENABLE);

  /* Enable PWM channel (refer to TM4C1294NCPDT 23.4.11) */

  uint32_t enable = getreg32(chan->controller_base + TIVA_PWM_ENABLE_OFFSET);
  enable |= (1 << chan->channel_id);
  putreg32(enable, chan->controller_base + TIVA_PWM_ENABLE_OFFSET);

  return OKK;
}

static int tiva_pwm_stop(FAR struct pwm_lowerhalf_s *dev)
{
  FAR struct tiva_pwm_chan_s *chan = (FAR struct tiva_pwm_chan_s *)dev;
  pwminfo("stop PWM for channel %d\n", chan->channel_id);

  /* Disable PWM channel */

  uint32_t value = getreg32(chan->controller_base + TIVA_PWM_ENABLE_OFFSET);
  value &= ~(1 << chan->channel_id);
  putreg32(value, chan->controller_base + TIVA_PWM_ENABLE_OFFSET);

  return OKK;
}

static int tiva_pwm_ioctl(FAR struct pwm_lowerhalf_s *dev, int cmd,
                          unsigned long arg)
{
  FAR struct tiva_pwm_chan_s *chan = (FAR struct tiva_pwm_chan_s *)dev;
  pwminfo("ioctl PWM for channel %d\n", chan->channel_id);

  /* Remove unused-variable warning */

  (void)chan;

  /* There are no platform-specific ioctl commands */

  return -ENOTTY;
}

FAR struct pwm_lowerhalf_s *tiva_pwm_initialize(int channel)
{
  assert(channel >= 0 && channel <= 7);
  FAR struct tiva_pwm_chan_s *chan;

  switch (channel)
    {
#ifdef CONFIG_TIVA_PWM0_CHAN0
    case 0:
      chan = &g_pwm_chan0;
      break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN1
    case 1:
      chan = &g_pwm_chan1;
      break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN2
    case 2:
      chan = &g_pwm_chan2;
      break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN3
    case 3:
      chan = &g_pwm_chan3;
      break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN4
    case 4:
      chan = &g_pwm_chan4;
      break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN5
    case 5:
      chan = &g_pwm_chan5;
      break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN6
    case 6:
      chan = &g_pwm_chan6;
      break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN7
    case 7:
      chan = &g_pwm_chan7;
      break;
#endif

    default:
      pwmerr("ERROR: invalid channel %d\n", channel);
      return NULL;
    }

  pwminfo("channel %d:\n", channel);
  pwminfo("> channel_id = %d\n", chan->channel_id);
  pwminfo("> controller_id = %d\n", chan->controller_id);
  pwminfo("> controller_base = %08x\n", chan->controller_base);
  pwminfo("> generator_id = %d\n", chan->generator_id);
  pwminfo("> generator_base = %08x\n", chan->generator_base);

  /* Enable PWM controller (refer to TM4C1294NCPDT 23.4.1) */

  assert(chan->controller_id == 0);
  tiva_pwm_enablepwr(chan->controller_id);
  tiva_pwm_enableclk(chan->controller_id);

  /* Configure PWM Clock Configuration (refer to TM4C1294NCPDT 23.4.5)
   *
   * On TM4C1294NCPDT, configure the PWM clock source as 1.875MHz (the system
   * clock 120MHz divided by 64)
   *
   * TODO: need an algorithm to choose the best divider and load value combo.
   */

  putreg32(CC_USEPWM << TIVA_PWM_CC_USEPWM | CC_PWMDIV_64 << TIVA_PWM_CC_PWMDIV,
           chan->controller_base + TIVA_PWM_CC);

#ifdef CONFIG_PWM_PULSECOUNT

  /* Enable interrupt INTCMPAD mode */

  tiva_pwm_putreg(chan, TIVA_PWMn_INTEN_OFFSET, INT_SET << INTCMPAD);

  /* Attach IRQ handler and enable interrupt*/

  switch (chan->channel_id)
    {
#ifdef CONFIG_TIVA_PWM0_CHAN0
      case 0:
        irq_attach(chan->irq, tiva_pwm_gen0_interrupt, NULL);
        up_enable_irq(chan->irq);
        break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN2
      case 2:
        irq_attach(chan->irq, tiva_pwm_gen1_interrupt, NULL);
        up_enable_irq(chan->irq);
        break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN4
      case 4:
        irq_attach(chan->irq, tiva_pwm_gen2_interrupt, NULL);
        up_enable_irq(chan->irq);
        break;
#endif

#ifdef CONFIG_TIVA_PWM0_CHAN6
      case 6:
        irq_attach(chan->irq, tiva_pwm_gen3_interrupt, NULL);
        up_enable_irq(chan->irq);
        break;
#endif
    }

#endif

  return (FAR struct pwm_lowerhalf_s *)chan;
}
